# mistaker_py

./: .gitignore  Pipfile  README.md  config.json  demo.py  mistake_generator.csv  mistake_generator.py  pyproject.toml  setup.cfg  test.csv
mistaker/: __init__.py  address.py  base.py  cli.py  constants.py  date.py  email.py  generator.py  license_number.py  name.py  number.py  word.py
tests/: test_address.py  test_date.py  test_email.py  test_generator.py  test_license_number.py  test_name.py  test_number.py  test_word.py
