[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistaker"
version = "0.3.0"
authors = [
  { name="Michael Cowden", email="mike@novate.ai" },
]
description = "A package for emulating common data entry errors"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mistaker = "mistaker.cli:main"

[project.urls]
"Homepage" = "https://github.com/xdotcommer/mistaker_py"
"Bug Tracker" = "https://github.com/xdotcommer/mistaker_py/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]