# setup.cfg
[metadata]
name = mistaker
version = 0.1.0
description = A package for emulating common data entry errors

[options]
packages = find:
python_requires = >=3.7
install_requires =
    nicknames>=0.1.11
    
[options.packages.find]
where = .
exclude = tests*

# pytest.ini
[pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v